--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a:active {
 .header {
     background-color: black;
     display: flex;
-    padding: 30px;
+    padding: 10px 30px 10px;
 }
 .logo {
     float: left;
@@ -39,7 +39,7 @@ a:active {
 .menu button {
     background-color: transparent;
     margin-left: 10px;
-    font-size: large;
+    font-size: small;
     color: white;
     padding: 10px;
     width: 100%;
@@ -69,7 +69,7 @@ footer {
     background-color: black;
     position: fixed;
     display: flex;
-    padding: 30px;
+    padding: 0 30px 0;
     bottom: 0;
 }
 footer img{
