--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a:active {
     display: flex;
 }
 .logo img {
-    width: 5%;
+    width: 40px;
     filter: invert(1);
     padding-right: 5px;
 }
@@ -101,4 +101,15 @@ footer img{
         to {
             visibility: hidden;
         }
+}
+#particles-js {
+    width: 100%;
+    height: 100%;
+}
+html {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+canvas {
+    display: block;
+    vertical-align: bottom;
 }
