--- a/style.css
+++ b/style.css
@@ -110,6 +110,8 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 canvas {
+    position: absolute;
+    z-index: 1;
     display: block;
     vertical-align: bottom;
 }
