--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 body {
-    background-image: url(./assets/background.jpg);
+    background-image: url(./assets/slides/2.jpg);
     background-repeat: repeat;
-    background-size: 100%;
+    background-size: 250vh;
+    background-position-x: center;
+    background-position-y: -200px;
     color: white;
     margin: 0;
+    position: absolute;
+    top: 0;
 }
 a {
     text-decoration: none;
@@ -16,9 +20,9 @@ a:active {
     color: white;
 }
 .header {
-    background-color: black;
+    background-color: transparent;
     display: flex;
-    padding: 10px 30px 10px;
+    padding: 20px 30px 10px;
 }
 .logo {
     float: left;
@@ -60,7 +64,7 @@ a:active {
     vertical-align: middle;
     text-align: center;
     font-size: larger;
-    height: 100vw;
+    margin-top: 100px;
 }
 .container img {
     width: 100%;
@@ -85,10 +89,10 @@ footer img{
     padding-bottom: 10px;
 }
 .project img {
-    width: 40%;
+    width: 70%;
     filter: invert(1);
 }
-.project h1 {
+.project blink {
     animation: blink-animation 1s steps(5, start) infinite;
     -webkit-animation: blink-animation 1s steps(5, start) infinite;
     }
