--- a/style.css
+++ b/style.css
@@ -65,11 +65,12 @@ a:active {
     text-align: center;
     font-size: larger;
     margin-top: 100px;
+    margin-bottom: 10vw;
 }
 .container img {
     width: 100%;
 }
-footer {
+.footer {
     background-color: black;
     position: fixed;
     display: flex;
@@ -77,7 +78,7 @@ footer {
     bottom: 0;
     z-index: 1;
 }
-footer img{
+.footer img{
     width: 20%;
     height: 10%;
     filter: invert(1);
@@ -115,8 +116,24 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 canvas {
-    position: absolute;
-    z-index: 1;
+    position: fixed;
     display: block;
     vertical-align: bottom;
+}
+.countdown p {
+    text-align: center;
+    font-size: 60px;
+    margin: 0;
+    padding-bottom: -10px;
+}
+.countdown table {
+    margin: auto;
+    text-align: center;
+    border: white 3px solid;
+    border-radius: 20px; 
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.countdown table td {
+    padding-right: 30px;
+    padding-left: 30px;
 }
