--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     margin: 0;
     position: absolute;
     top: 0;
+    font-family: 'Calibri';
 }
 a {
     text-decoration: none;
@@ -117,6 +118,7 @@ html {
 }
 canvas {
     position: fixed;
+    top: 0;
     display: block;
     vertical-align: bottom;
 }
@@ -132,6 +134,7 @@ canvas {
     border: white 3px solid;
     border-radius: 20px; 
     background-color: rgba(0, 0, 0, 0.5);
+    margin-top: 30px;
 }
 .countdown table td {
     padding-right: 30px;
