--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
     position: absolute;
     top: 0;
-    font-family: 'Calibri';
+    font-family: 'Google Sans';
 }
 a {
     text-decoration: none;
@@ -19,6 +19,9 @@ a:hover {
 }
 a:active {
     color: white;
+}
+button {
+    font-family: 'Google Sans';
 }
 .header {
     background-color: transparent;
@@ -55,8 +58,10 @@ a:active {
     text-decoration: none;
 }
 .menu a:hover {
-    border-bottom: 3px solid gray;
-    color: gray;
+    background-color: white;
+    color: black;
+    padding: 10px;
+    border-radius: 10px;
 }
 .active{
     border-bottom: 3px solid white;
