--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
     position: absolute;
     top: 0;
-    font-family: 'Google Sans';
+    font-family: 'montserrat';
 }
 a {
     text-decoration: none;
@@ -21,7 +21,7 @@ a:active {
     color: white;
 }
 button {
-    font-family: 'Google Sans';
+    font-family: 'montserrat';
 }
 .header {
     background-color: transparent;
@@ -58,13 +58,11 @@ button {
     text-decoration: none;
 }
 .menu a:hover {
-    background-color: white;
-    color: black;
-    padding: 10px;
-    border-radius: 10px;
+    border-bottom: 3px solid grey;
+    color: grey;
 }
 .active{
-    border-bottom: 3px solid white;
+    border-bottom: 1px solid white;
 }
 .container {
     vertical-align: middle;
