--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,13 @@
     font-family: habilihsanproject;
     src: url("./assets/habilihsanproject.ttf");
 }
+@font-face {
+    font-family: Montserrat;
+    src: url("https://fonts.gstatic.com/s/montserrat/v25/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCuM73w5aXo.woff2") format("woff2");
+}
 h1 {
-    font-family: habilihsanproject, sans-serif;
-    font-size: 75px !important;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 50px !important;
 }
 .navbar {
     height: 50px;
