--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 @font-face {
     font-family: Montserrat;
-    src: url("https://fonts.gstatic.com/s/montserrat/v25/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCuM73w5aXo.woff2") format("woff2");
+    src: url("./assets/Montserrat-Bold.ttf");
 }
 h1 {
     font-family: 'Montserrat', sans-serif;
