--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-
+<html>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a id="logo" class="navbar-brand logo white" href="#">
@@ -18,3 +18,49 @@
           </div>
         </div>
     </nav>
+</html>
+
+<script>
+  function theme() {
+    let html = document.getElementsByTagName("html")[0].dataset.bsTheme
+    let set = document.getElementById("setTheme").classList
+    let logo = document.getElementById("logo").classList
+    let footer = document.getElementById("footer").classList
+    if (html === "dark") {
+      document.getElementsByTagName("html")[0].dataset.bsTheme = undefined
+      set.add("mdi-weather-sunny")
+      set.remove("mdi-weather-night")
+      set.remove("white")
+      logo.remove("white")
+      footer.remove("white")
+    } else {
+      document.getElementsByTagName("html")[0].dataset.bsTheme = "dark"
+      set.add("mdi-weather-night")
+      set.remove("mdi-weather-sunny")
+      set.add("white")
+      logo.add("white")
+      footer.add("white")
+    }
+  }
+  fetch("./databases/navbar.json")
+    .then(response => response.json())
+    .then(data => {
+      console.log(data)
+      let navbar_list = data
+      let navbarList = document.querySelector("#navbarList")
+      let navbarLink = document.getElementById("navbarLink")
+      const navbar = data => {
+      const template = document.createElement("template")
+      template.innerHTML =
+      `<li class="nav-item navItem" id="navbarItem">
+      <a class="nav-link" id="navbarLink${navbar_list[i].title}" aria-current="page" href="${navbar_list[i].to}">${navbar_list[i].title}</a>
+      </li>`
+      .trim()
+      return template.content.firstChild
+  }
+  for (i in navbar_list) {
+    navbarList.append(navbar(0))
+  }
+  document.getElementById("navbarLinkHOME").classList.add("active")
+  })
+</script>
