--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,7 +21,7 @@
 </html>
 
 <script>
-  fetch("./databases/navbar.json")
+  fetch("../databases/navbar.json")
     .then(response => response.json())
     .then(data => {
       console.log(data)
