--- a/jkt48-theater/home.css
+++ b/jkt48-theater/home.css
@@ -1,7 +1,7 @@
 .page-name {
-    margin: 0.5em 2.5em;
-    color: rgb(18, 96, 101);
+    text-align: center;
     font-size: 2.5em;
+    padding-bottom: 10px;
 }
 
 #text-box {
