--- a/jkt48-theater/index.css
+++ b/jkt48-theater/index.css
@@ -16,9 +16,8 @@ html, body {
 
 .vjs-big-play-button {
     top: 50% !important;
-    left: 0 !important;
-    margin-left: 45% !important;
-    margin-right: 45% !important;
+    left: 45% !important;
+    right: 45% !important;
     width: -webkit-fill-available !important;
 }
   
