--- a/jkt48-theater/index.css
+++ b/jkt48-theater/index.css
@@ -45,7 +45,22 @@ html, body {
 }
 
 .schedule {
-    font-size: large;
+    background-color: white;
+    width: -webkit-fill-available;
+    padding: 20px;
+}
+
+.title-schedule {
+    font-size: x-large;
     font-weight: bolder;
-    color: white;
+    color: black;
+    text-align: center;
+}
+
+.table {
+    color: black;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
