--- a/jkt48-theater/res/index.css
+++ b/jkt48-theater/res/index.css
@@ -115,7 +115,7 @@ body {
 
 .perform {
     font-weight: bold;
-    font-size: xx-large;
+    font-size: x-large;
     text-align: center;
     margin-bottom: 0 !important;
 }
