JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/r/index.css
+++ b/jkt48-pm/r/index.css
@@ -111,3 +111,8 @@ form {
     align-self: center;
     justify-self: center;
 }
+
+.alert {
+    width: 90% !important;
+    padding: 10px !important;
+}
