JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/r/index.css
+++ b/jkt48-pm/r/index.css
@@ -15,8 +15,9 @@ label {
 }
 
 form {
-    width: auto;
+    width: 90% !important;
     margin-top: 50px;
+    padding: 20px;
 }
 
 .list-group {
@@ -110,9 +111,4 @@ form {
 .load div {
     align-self: center;
     justify-self: center;
-}
-
-.alert {
-    width: 90% !important;
-    padding: 10px !important;
 }
