JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/r/index.css
+++ b/jkt48-pm/r/index.css
@@ -18,6 +18,8 @@ form {
     width: 90% !important;
     margin-top: 50px;
     padding: 20px;
+    margin-left: auto !important;
+    margin-right: auto !important;
 }
 
 .list-group {
