--- a/jkt48-pm/r/index.css
+++ b/jkt48-pm/r/index.css
@@ -16,10 +16,11 @@ label {
 
 form {
     width: 90% !important;
-    margin-top: 50px;
     padding: 20px;
     margin-left: auto !important;
     margin-right: auto !important;
+    background-color: white;
+    border-radius: 20px;
 }
 
 .list-group {
