--- a/jkt48-pm/r/index.css
+++ b/jkt48-pm/r/index.css
@@ -14,7 +14,7 @@ label {
     margin-top: 10px
 }
 
-form {
+.form {
     width: 90% !important;
     padding: 20px;
     margin-left: auto !important;
