--- a/validitech/r/index.css
+++ b/validitech/r/index.css
@@ -20,3 +20,10 @@ body {
     background-blend-mode: overlay;
     background-size: cover;
 }
+
+.avatar {
+    width: 50px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+}
