--- a/validitech/r/index.css
+++ b/validitech/r/index.css
@@ -19,6 +19,7 @@ body {
     background-image: url("https://media.istockphoto.com/id/1435226158/photo/circuit-board-background-computer-data-technology-artificial-intelligence.webp?b=1&s=170667a&w=0&k=20&c=d-gHg6uCV5JEaKJCpxhJ01Ab19m032daRC8vDo8NzDI=");
     background-blend-mode: overlay;
     background-size: cover;
+    background-repeat: no-repeat !important;
 }
 
 .avatar {
@@ -26,4 +27,9 @@ body {
     height: 50px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.spinner-grow {
+    --bs-spinner-height: 1em !important;
+    --bs-spinner-width: 1em !important;
 }
