--- a/jkt48-pm/r/index.css
+++ b/jkt48-pm/r/index.css
@@ -130,3 +130,13 @@ label {
     margin-left: auto;
     margin-top: 30px;
 }
+
+.ads {
+    background-color: white;
+    border-radius: 20px !important;
+}
+
+#container-447c775022427997699b9223051cb580 .container-447c775022427997699b9223051cb580__bn {
+    border-radius: 20px !important;
+    border: 1px solid gray !important;
+}
